appId: ${APP_ID}
---
- launchApp
- tapOn: "Library"
- tapOn: "Stats"
- assertVisible: ".*Chandelier.*"

- takeScreenshot: "view-stats"